# QueryMind

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: mongo-writer.md  sql-writer.md  test-writer.md
.claude/skills/add-memory/: SKILL.md
.claude/skills/gen-mongo/: SKILL.md
.claude/skills/gen-sql/: SKILL.md
.claude/skills/n8n-node/: SKILL.md
config/: n8n_credentials.yaml
src/: config.py
src/agent/: chain.py  prompts.py  router.py
src/api/: models.py  routes.py
src/generators/: mongo_gen.py  sql_gen.py
src/memory/: embedder.py  session.py  store.py
src/n8n_mapper/: mapper.py  templates.py
src/schema_loader/: context_selector.py  introspector.py
src/schema_loader/annotations/: orders.yaml
src/validators/: mongo_validator.py  sql_validator.py
tests/: conftest.py
tests/api/: test_routes.py
tests/generators/: test_mongo_gen.py  test_sql_gen.py
tests/validators/: test_mongo_validator.py  test_sql_validator.py
